test/files_test/errors/call_non_procedure.scm
; Test: Calling a non-procedure - should return exit code 84
(42 1 2)
